# Factoriozone

./: .gitignore  data.db  main.py  pyproject.toml  requirements.txt  settings.json
src/: Bot.py  FzSocket.py  websocket.py
src/cogs/: Events.py  FzCommands.py
src/devCogs/: Events.py  FzDevCommands.py
src/extras/: database.py  posts.py  settingsSelector.py  tokenModal.py  tokenSelector.py
